# ShaftDB

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/omp/: CMakeLists.txt  tpch12_omp.cpp  tpch14_omp.cpp  tpch17_omp.cpp  tpch19_omp.cpp  tpch1_omp.cpp  tpch4_omp.cpp  tpch6_omp.cpp  tpch8_omp.cpp
app/test/: CMakeLists.txt  comparison.cpp  operator.cpp  tpch1_mem_save.cpp  tpch6_between.cpp
app/tpch/: CMakeLists.txt  tpch1.cpp  tpch12.cpp  tpch14.cpp  tpch17.cpp  tpch19.cpp  tpch4.cpp  tpch6.cpp  tpch8.cpp
src/nshedb/: CMakeLists.txt  comparator.cpp  nshedb.h  predicates.cpp  predicates.h
src/shaftdb/: CMakeLists.txt  comparator.h  shaftdb.h  utils.h
