set(SHAFTDB_SOURCE_FILES ${SHAFTDB_SOURCE_FILES}
    ${CMAKE_CURRENT_LIST_DIR}/comparator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/predicates.cpp
)

install(
    FILES
        ${CMAKE_CURRENT_LIST_DIR}/comparator.h
        ${CMAKE_CURRENT_LIST_DIR}/predicates.h
        ${CMAKE_CURRENT_LIST_DIR}/shaftdb.h
        ${CMAKE_CURRENT_LIST_DIR}/utils.h
    DESTINATION
        ${SHAFTDB_INCLUDES_INSTALL_DIR}/shaftdb
)
set(SHAFTDB_SOURCE_FILES ${SHAFTDB_SOURCE_FILES} PARENT_SCOPE)
